--- a/partials/loop.html
+++ b/partials/loop.html
@@ -1,5 +1,6 @@
 <h1>{{page_title}}</h1>
 
 <article ng-repeat="post in posts">
-	<h1>{{ post.title.rendered }}</h1>
+	<h1><a href="{{ post.link }}">{{ post.title.rendered }}</a></h1>
+	<div ng-bind-html="post.content.rendered" class="post"></div>
 </article>
