finished sass workflow setup

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,2 +1,12 @@
+/*!
+Theme Name: Made With Angular
+Theme URI: http://jsulz.com
+Author: Jared Sulzdorf
+Author URI: http://jsulz.com
+Description: A theme build with the WP REST API and AngularJS
+Version: 1.0.0
+Tags: translation-ready
+Text Domain: theme
+*/
 @import "base.scss";
 @import "layout.scss";
