--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
-body {
-  color: red; }
-
-/*# sourceMappingURL=style.css.map */
+/*!
+Theme Name: Made With Angular
+Theme URI: http://jsulz.com
+Author: Jared Sulzdorf
+Author URI: http://jsulz.com
+Description: A theme build with the WP REST API and AngularJS
+Version: 1.0.0
+Tags: translation-ready
+Text Domain: theme
+*/html{color:yellow}body{color:orange}
+h1 {
+	color: green;
+}
